--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="ThemeOri" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Title of Site -->
-    <title>Metier - Portfolio HTML5 Template</title>
+    <title>Gary - a fullstack man</title>
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Bootstrap CSS -->
