logo font updated, self introduction font-size changed

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <!-- Start Meta -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Metier  - Portfolio HTML5 Template" />
+    <meta name="description" content="Gary - a python, AI, PHP expert man, web developer portfolio" />
     <meta
       name="keywords"
-      content="Creative, Digital, multipage, landing, freelancer template"
+      content="Gary, Portfolio, Web, Python, AI, PHP"
     />
-    <meta name="author" content="ThemeOri" />
+    <meta name="author" content="Gary" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Title of Site -->
-    <title>Gary - a fullstack man</title>
+    <title>Gary - a web developer</title>
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Bootstrap CSS -->
@@ -48,7 +48,7 @@
         <div class="header__area-box">
           <div class="header__area-box-logo">
             <a href="index.html">
-              <img src="assets/img/logo-2.png" alt="" />
+              <img src="assets/img/logo-2.png" alt="" /><p class="logo-text">Gary</p>
             </a>
           </div>
           <div class="header__area-box-sidebar d-block">
@@ -63,7 +63,7 @@
             </div>
             <div class="header__area-box-sidebar-popup-logo">
               <a href="index.html">
-                <img src="assets/img/logo-2.png" alt="" />
+                <img src="assets/img/logo-2.png" alt="" /><p class="logo-text">Gary</p>
               </a>
             </div>
             <div class="contact__info">
