--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -48,7 +48,7 @@
         <div class="header__area-box">
           <div class="header__area-box-logo two">
             <a href="index.html">
-              <img src="assets/img/logo-2.png" alt="" />
+              <img src="assets/img/logo-2.png" alt="" /><span class="logo-text">Gary</span>
             </a>
             <div class="responsive-menu"></div>
           </div>
@@ -107,7 +107,7 @@
             </div>
             <div class="header__area-box-sidebar-popup-logo">
               <a href="index.html">
-                <img src="assets/img/logo-2.png" alt="" />
+                <img src="assets/img/logo-2.png" alt="" /><span class="logo-text">Gary</span>
               </a>
             </div>
             <p>
