portfolio detail infomations and images modified

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <!-- Start Meta -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Gary - a python, AI, PHP expert man, web developer portfolio" />
+    <meta name="description" content="Gary - a python, AI, PHP expert and experienced web developer portfolio" />
     <meta
       name="keywords"
-      content="Gary, Portfolio, Web, Python, AI, PHP"
+      content="Gary, Portfolio, Web, Python, AI, PHP expert Developer"
     />
     <meta name="author" content="Gary" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -291,11 +291,9 @@
             <div class="portfolio__area-two-btn">
               <ul>
                 <li class="active" data-filter="*">Show All</li>
-                <li data-filter=".design">Web Development</li>
-                <li data-filter=".development">Artificial Intelligence</li>
-                <!-- <li data-filter=".marketing">AI</li> -->
-                <li data-filter=".strategy">ASP.NET</li>
-                <!-- <li data-filter=".branding">Branding</li> -->
+                <li data-filter=".web">Web Development</li>
+                <li data-filter=".ai">Artificial Intelligence</li>
+                <li data-filter=".asp_net">ASP.NET</li>
               </ul>
             </div>
           </div>
@@ -309,8 +307,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link1">Photography</a></h4>
+                <span>ASP.NET platform</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link1">Worksimply</a></h4>
               </div>
             </div>
           </div>
@@ -324,8 +322,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link2">Photography</a></h4>
+                <span>Sale online</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link2">Core Peptides</a></h4>
               </div>
             </div>
           </div>
@@ -339,8 +337,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link3">Photography</a></h4>
+                <span>AI based service</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link3">Counsel Hound</a></h4>
               </div>
             </div>
           </div>
@@ -354,8 +352,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link4">Photography</a></h4>
+                <span>The goal to inform the state of Minnesota</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link4">The Development Tracker</a></h4>
               </div>
             </div>
           </div>
@@ -367,8 +365,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link5">Photography</a></h4>
+                <span>a DBA of Gulf Beach Development, Inc</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link5">Gast Homes</a></h4>
               </div>
             </div>
           </div>
@@ -382,8 +380,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link6">Photography</a></h4>
+                <span>Push your voice to a new dimension</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link6">Live audio app</a></h4>
               </div>
             </div>
           </div>
@@ -397,8 +395,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link7">Photography</a></h4>
+                <span>GREAT FUTURES START HERE</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link7">Boys & Girls Club</a></h4>
               </div>
             </div>
           </div>
@@ -412,8 +410,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link8">Photography</a></h4>
+                <span>Global Online Retailer</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link8">Lust a hair</a></h4>
               </div>
             </div>
           </div>
@@ -427,8 +425,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Photography</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link9">Photography</a></h4>
+                <span>Reduces stress and improves your productivity</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link9">Calmind Company</a></h4>
               </div>
             </div>
           </div>
