--- a/index.html
+++ b/index.html
@@ -134,6 +134,22 @@
                   <div class="skill__area-two-right-skill-item-content">
                     <h6>Python / AI</h6>
                     <span class="skill__area-two-right-skill-item-count">
+                      <span class="counter">91</span>%</span
+                    >
+                  </div>
+                  <div class="skill__area-two-right-skill-item-inner">
+                    <div
+                      class="skill__area-two-right-skill-item-bar"
+                      data-width="91"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="skill__area-two-right-skill mt-30">
+                <div class="skill__area-two-right-skill-item">
+                  <div class="skill__area-two-right-skill-item-content">
+                    <h6>React / Node.js / MongoDB</h6>
+                    <span class="skill__area-two-right-skill-item-count">
                       <span class="counter">99</span>%</span
                     >
                   </div>
@@ -148,31 +164,15 @@
               <div class="skill__area-two-right-skill mt-30">
                 <div class="skill__area-two-right-skill-item">
                   <div class="skill__area-two-right-skill-item-content">
-                    <h6>React / Node.js / MongoDB</h6>
-                    <span class="skill__area-two-right-skill-item-count">
-                      <span class="counter">96</span>%</span
-                    >
-                  </div>
-                  <div class="skill__area-two-right-skill-item-inner">
-                    <div
-                      class="skill__area-two-right-skill-item-bar"
-                      data-width="96"
-                    ></div>
-                  </div>
-                </div>
-              </div>
-              <div class="skill__area-two-right-skill mt-30">
-                <div class="skill__area-two-right-skill-item">
-                  <div class="skill__area-two-right-skill-item-content">
                     <h6>Vue.js / Laravel / PHP / MySQL</h6>
                     <span class="skill__area-two-right-skill-item-count">
-                      <span class="counter">83</span>%</span
+                      <span class="counter">98</span>%</span
                     >
                   </div>
                   <div class="skill__area-two-right-skill-item-inner">
                     <div
                       class="skill__area-two-right-skill-item-bar"
-                      data-width="83"
+                      data-width="98"
                     ></div>
                   </div>
                 </div>
@@ -182,13 +182,13 @@
                   <div class="skill__area-two-right-skill-item-content">
                     <h6>C# / .Net Core / .Net Framework / Angular</h6>
                     <span class="skill__area-two-right-skill-item-count">
-                      <span class="counter">78</span>%</span
+                      <span class="counter">97</span>%</span
                     >
                   </div>
                   <div class="skill__area-two-right-skill-item-inner">
                     <div
                       class="skill__area-two-right-skill-item-bar"
-                      data-width="78"
+                      data-width="97"
                     ></div>
                   </div>
                 </div>
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="row portfolio__area-two-active">
-          <div class="col-xl-4 col-lg-4 col-md-6 portfolio-item mb-30">
+          <div class="col-xl-4 col-lg-4 col-md-6 portfolio-item asp_net mb-30">
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
@@ -313,7 +313,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item marketing mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -328,7 +328,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item branding design mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item asp_net ai mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -343,7 +343,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item development marketing mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item asp_net web mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -357,7 +357,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 portfolio-item design mb-30">
+          <div class="col-xl-4 col-lg-4 col-md-6 portfolio-item asp_net web mb-30">
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
@@ -371,7 +371,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item development branding strategy mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web ai mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -386,7 +386,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item strategy branding lg-mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item asp_net ai lg-mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -401,7 +401,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item design lg-mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web lg-mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -416,7 +416,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item strategy development"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web ai development"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -539,16 +539,16 @@
             <div class="swiper sponsors-slider">
               <div class="swiper-wrapper">
                 <div class="sponsors__area-brand swiper-slide">
-                  <a href="#"><img src="assets/img/brand-1.png" alt="" /></a>
+                  <a href="https://worksimply.com/" target="_blank"><img src="assets/img/brand-1.png" alt=""/></a>
                 </div>
                 <div class="sponsors__area-brand swiper-slide">
-                  <a href="#"><img src="assets/img/brand-2.png" alt="" /></a>
+                  <a href="https://www.corepeptides.com/" target="_blank"><img src="assets/img/brand-2.png" alt="" /></a>
                 </div>
                 <div class="sponsors__area-brand swiper-slide">
-                  <a href="#"><img src="assets/img/brand-3.png" alt="" /></a>
+                  <a href="https://oncie.live/en" target="_blank"><img src="assets/img/brand-3.png" alt="" /></a>
                 </div>
                 <div class="sponsors__area-brand swiper-slide">
-                  <a href="#"><img src="assets/img/brand-4.png" alt="" /></a>
+                  <a href="https://counselhound.com/" target="_blank"><img src="assets/img/brand-4.png" alt="" /></a>
                 </div>
               </div>
             </div>
