portfolio images updated

--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -232,6 +232,10 @@
                       <h6>Date :</h6>
                       <span id="portfolio__details_two_date">27 March, 2022</span>
                     </div>
+                    <!-- <div class="all__sidebar-item-details-list">
+                      <h6>Go to Page:</h6>
+                      <span id="portfolio__details_two_page"><a href="#" id="portfolio__details_two_page_link">site.com</a></span>
+                    </div> -->
                   </div>
                 </div>
               </div>
