--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="header__area-box-sidebar-popup-logo">
               <a href="index.html">
-                <img src="assets/img/logo-2.png" alt="" /><p class="logo-text">Gary</p>
+                <img src="assets/img/logo-2.png" alt="" /><p class="logo-text" style="color: white;">Gary</p>
               </a>
             </div>
             <div class="contact__info">
@@ -303,7 +303,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-7.jpg"
+                src="assets/img/portfolio/portfolio-7.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -318,7 +318,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-8.jpg"
+                src="assets/img/portfolio/portfolio-8.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -333,7 +333,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-9.jpg"
+                src="assets/img/portfolio/portfolio-9.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -348,7 +348,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-10.jpg"
+                src="assets/img/portfolio/portfolio-10.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -361,7 +361,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-11.jpg"
+                src="assets/img/portfolio/portfolio-11.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -376,7 +376,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-12.jpg"
+                src="assets/img/portfolio/portfolio-12.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -391,7 +391,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-13.jpg"
+                src="assets/img/portfolio/portfolio-13.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -406,7 +406,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-14.jpg"
+                src="assets/img/portfolio/portfolio-14.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
@@ -421,7 +421,7 @@
             <div class="portfolio__area-two-item">
               <img
                 class="img__full"
-                src="assets/img/portfolio/portfolio-15.jpg"
+                src="assets/img/portfolio/portfolio-15.png"
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
