portfolio images changing

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>ASP.NET platform</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link1">Worksimply</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link1" target="_blank">Worksimply</a></h4>
               </div>
             </div>
           </div>
@@ -323,7 +323,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>Sale online</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link2">Core Peptides</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link2" target="_blank">Core Peptides</a></h4>
               </div>
             </div>
           </div>
@@ -338,7 +338,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>AI based service</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link3">Counsel Hound</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link3" target="_blank">Counsel Hound</a></h4>
               </div>
             </div>
           </div>
@@ -353,7 +353,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>The goal to inform the state of Minnesota</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link4">The Development Tracker</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link4" target="_blank">The Development Tracker</a></h4>
               </div>
             </div>
           </div>
@@ -366,7 +366,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>a DBA of Gulf Beach Development, Inc</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link5">Gast Homes</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link5" target="_blank">Gast Homes</a></h4>
               </div>
             </div>
           </div>
@@ -381,7 +381,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>Push your voice to a new dimension</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link6">Live audio app</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link6" target="_blank">Live audio app</a></h4>
               </div>
             </div>
           </div>
@@ -396,7 +396,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>GREAT FUTURES START HERE</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link7">Boys & Girls Club</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link7" target="_blank">Boys & Girls Club</a></h4>
               </div>
             </div>
           </div>
@@ -411,7 +411,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>Global Online Retailer</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link8">Lust a hair</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link8" target="_blank">Lust a hair</a></h4>
               </div>
             </div>
           </div>
@@ -426,7 +426,7 @@
               />
               <div class="portfolio__area-two-item-content">
                 <span>Reduces stress and improves your productivity</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link9">Calmind Company</a></h4>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link9" target="_blank">Calmind Company</a></h4>
               </div>
             </div>
           </div>
