--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -4,15 +4,15 @@
     <!-- Start Meta -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Metier  - Portfolio HTML5 Template" />
+    <meta name="description" content="Gary | a web developer" />
     <meta
       name="keywords"
-      content="Creative, Digital, multipage, landing, freelancer template"
+      content="Gary-marin, web, ai expert, asp.net python Full-stack"
     />
-    <meta name="author" content="ThemeOri" />
+    <meta name="author" content="Gary" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Title of Site -->
-    <title>Metier - Portfolio HTML5 Template</title>
+    <title>Gary-marin | a web developer</title>
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Bootstrap CSS -->
@@ -218,9 +218,9 @@
               </div>
               <div class="all__sidebar">
                 <div class="all__sidebar-item details one">
-                  <h4>Portfolio Details</h4>
+                  <h4>Visit This Site</h4>
                   <div class="all__sidebar-item-details">
-                    <div class="all__sidebar-item-details-list">
+                    <!-- <div class="all__sidebar-item-details-list">
                       <h6>Client :</h6>
                       <span id="portfolio__details_two_client">ThemeOri agency</span>
                     </div>
@@ -231,11 +231,11 @@
                     <div class="all__sidebar-item-details-list">
                       <h6>Date :</h6>
                       <span id="portfolio__details_two_date">27 March, 2022</span>
-                    </div>
-                    <!-- <div class="all__sidebar-item-details-list">
-                      <h6>Go to Page:</h6>
-                      <span id="portfolio__details_two_page"><a href="#" id="portfolio__details_two_page_link">site.com</a></span>
                     </div> -->
+                    <div class="all__sidebar-item-details-list">
+                      <h6>Go to HomePage :</h6>
+                      <span id="portfolio__details_two_page"><a href="#" id="portfolio__details_two_page_link" style="text-transform: none;">site.com</a></span>
+                    </div>
                   </div>
                 </div>
               </div>
