portfolio imagies updated.

--- a/index.html
+++ b/index.html
@@ -436,13 +436,13 @@
     <!-- Portfolio Area End -->
     <!-- Video Area Start -->
     <div class="video__area" data-background="assets/img/video.jpg">
-      <div class="container">
+      <!-- <div class="container">
         <div class="row">
           <div class="col-xl-12">
             <div class="video__area-play-icon video-pulse"> <a class="video-popup" href="https://www.youtube.com/watch?v=0WC-tD-njcA"><i class="fas fa-play"></i></a> </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <!-- Video Area End -->
     <!-- Work Area Start -->
