deleted unused images

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>ASP.NET platform</span>
+                <span>ASP.NET Platform</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link1" target="_blank">Worksimply</a></h4>
               </div>
             </div>
@@ -352,8 +352,8 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>The goal to inform the state of Minnesota</span>
-                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link4" target="_blank">The Development Tracker</a></h4>
+                <span>The goal of Minnesota</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link4" target="_blank">Development Tracker</a></h4>
               </div>
             </div>
           </div>
@@ -365,7 +365,7 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>a DBA of Gulf Beach Development, Inc</span>
+                <span>ASP.NET, Web Service</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link5" target="_blank">Gast Homes</a></h4>
               </div>
             </div>
@@ -380,7 +380,7 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Push your voice to a new dimension</span>
+                <span>AI, Web Service</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link6" target="_blank">Live audio app</a></h4>
               </div>
             </div>
@@ -395,7 +395,7 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>GREAT FUTURES START HERE</span>
+                <span>ASP.NET, AI Service</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link7" target="_blank">Boys & Girls Club</a></h4>
               </div>
             </div>
@@ -425,7 +425,7 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>Reduces stress and improves your productivity</span>
+                <span>Reduces stress</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link9" target="_blank">Calmind Company</a></h4>
               </div>
             </div>
