more portfolios added

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>ASP.NET Platform</span>
+                <span>ASP.NET Framework</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link1" target="_blank">Worksimply</a></h4>
               </div>
             </div>
@@ -386,7 +386,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item asp_net ai lg-mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item asp_net ai mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -401,7 +401,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web lg-mb-30"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -416,7 +416,7 @@
             </div>
           </div>
           <div
-            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web ai development"
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web ai development mb-30"
           >
             <div class="portfolio__area-two-item">
               <img
@@ -427,6 +427,51 @@
               <div class="portfolio__area-two-item-content">
                 <span>Reduces stress</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link9" target="_blank">Calmind Company</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-16.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>Digitally build, furnish</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link10" target="_blank">Any home</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-17.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>BEST WINDOWS & DOORS</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link11" target="_blank">To CARBONNEAU'S</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item web mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-18.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>Pass Your Limits With</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link12" target="_blank">Redline</a></h4>
               </div>
             </div>
           </div>
