--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -234,7 +234,7 @@
                     </div> -->
                     <div class="all__sidebar-item-details-list">
                       <h6>Go to HomePage :</h6>
-                      <span id="portfolio__details_two_page"><a href="#" id="portfolio__details_two_page_link" target="_blank" style="text-transform: none;">site.com</a></span>
+                      <span id="portfolio__details_two_page"><a href="#" id="portfolio__details_two_page_link" target="_blank" style="text-transform: none; text-decoration: underline;">site.com</a></span>
                     </div>
                   </div>
                 </div>
