--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-xl-12">
             <div class="banner__area-three-content">
               <h1>Gary Marin</h1>
-              <h2>Python, AI, PHP Expert<br>(Web Developer)</h2>
+              <h2>Python, AI, .Net, PHP, Node.js Expert<br>(Fullstack Web Developer)</h2>
               <!-- <a class="theme-btn-1" href="contact.html"
                 >Get A Quote <i class="fal fa-long-arrow-right"></i
               ></a> -->
