--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-xl-12">
             <div class="banner__area-three-content">
               <h1>Gary Marin</h1>
-              <h2>Python, AI, .Net, PHP, Node.js Expert<br>(Fullstack Web Developer)</h2>
+              <h2>Python, AI, .Net, PHP, Node.js, CMS, Blockchain Expert<br>(Fullstack Web Developer)</h2>
               <!-- <a class="theme-btn-1" href="contact.html"
                 >Get A Quote <i class="fal fa-long-arrow-right"></i
               ></a> -->
@@ -161,6 +161,7 @@
                   </div>
                 </div>
               </div>
+              
               <div class="skill__area-two-right-skill mt-30">
                 <div class="skill__area-two-right-skill-item">
                   <div class="skill__area-two-right-skill-item-content">
@@ -177,6 +178,41 @@
                   </div>
                 </div>
               </div>
+
+              <div class="skill__area-two-right-skill mt-30">
+                <div class="skill__area-two-right-skill-item">
+                  <div class="skill__area-two-right-skill-item-content">
+                    <h6>CMS/WordPress/Drupal/Webflow/Bubble</h6>
+                    <span class="skill__area-two-right-skill-item-count">
+                      <span class="counter">98</span>%</span
+                    >
+                  </div>
+                  <div class="skill__area-two-right-skill-item-inner">
+                    <div
+                      class="skill__area-two-right-skill-item-bar"
+                      data-width="98"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill__area-two-right-skill mt-30">
+                <div class="skill__area-two-right-skill-item">
+                  <div class="skill__area-two-right-skill-item-content">
+                    <h6>Blockchain/Solidity/Crypto/Ethereum/Web3</h6>
+                    <span class="skill__area-two-right-skill-item-count">
+                      <span class="counter">99</span>%</span
+                    >
+                  </div>
+                  <div class="skill__area-two-right-skill-item-inner">
+                    <div
+                      class="skill__area-two-right-skill-item-bar"
+                      data-width="99"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              
               <div class="skill__area-two-right-skill mt-30">
                 <div class="skill__area-two-right-skill-item">
                   <div class="skill__area-two-right-skill-item-content">
