--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <li data-filter=".ai">Artificial Intelligence</li>
                 <li data-filter=".asp_net">ASP.NET</li>
                 <li data-filter=".blockchain">Blockchain</li>
-                <li data-filter=".cms">Wordpress</li>
+                <li data-filter=".cms">CMS</li>
               </ul>
             </div>
           </div>
