--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-xl-12">
             <div class="banner__area-three-content">
               <h1>Gary Marin</h1>
-              <h2>Python, AI, .Net, PHP, Node.js, CMS, Blockchain Expert<br>(Fullstack Web Developer)</h2>
+              <h2>Python,RoR, AI, .Net, PHP, Node.js, CMS, Blockchain Expert<br>(Fullstack Web Developer)</h2>
               <!-- <a class="theme-btn-1" href="contact.html"
                 >Get A Quote <i class="fal fa-long-arrow-right"></i
               ></a> -->
